<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/id_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/employee_id"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/real_id_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textStart"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/id_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1" />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/name"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/id_text_view" />

                <TextView
                    android:id="@+id/real_name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:textAllCaps="true"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/name_text_view"
                    app:layout_constraintTop_toBottomOf="@id/real_id_text_view"
                    tools:text="name" />

                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/email"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_text_view" />

                <TextView
                    android:id="@+id/real_email_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/name_text_view"
                    app:layout_constraintTop_toBottomOf="@id/real_name_text_view"
                    tools:text="email@gmail.com" />

                <TextView
                    android:id="@+id/address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/address"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_text_view" />

                <TextView
                    android:id="@+id/real_address_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="16dp"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_text_view"
                    app:layout_constraintBottom_toTopOf="@id/phone_text_view"/>

                <TextView
                    android:id="@+id/phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintTop_toBottomOf="@id/real_address_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/phone"
                    />
                <TextView
                    android:id="@+id/real_phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintTop_toBottomOf="@id/real_address_text_view"
                    app:layout_constraintStart_toEndOf="@id/phone_text_view"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/phone_text_view">
                    <TextView
                        android:id="@+id/company_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:text="@string/company_details"/>
                    <TextView
                        android:id="@+id/real_company_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="company address"
                        android:textAppearance="?textAppearanceBody1"
                        />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>